# pui-old

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  macros.rs  runtime.rs  scoped.rs  test_setup.rs  typeid.rs  typeid_tl.rs
src/runtime/: macros.rs  pool.rs
src/typeid/: macros.rs
src/typeid_tl/: macros.rs
tests/: compile_fail.rs  runtime.rs  typeid.rs
tests/compile_fail/: runtime_thread_local 0.stderr  runtime_thread_local 2.rs  runtime_thread_local 2.stderr  runtime_thread_local 3.rs  runtime_thread_local 3.stderr  thread_local.rs
tests/compile_fail/no_std/runtime/: thread_local.rs  thread_local.stderr
tests/compile_fail/scoped/: eq 1.rs  eq 1.stderr  eq 2.rs  eq 2.stderr  eq.stderr
tests/compile_fail/thread_local/: runtime_thread_local 0.rs  runtime_thread_local 0.stderr  runtime_thread_local 1.rs  runtime_thread_local 1.stderr  runtime_thread_local 2.rs  runtime_thread_local 2.stderr  runtime_thread_local 3.rs  runtime_thread_local 3.stderr  thread_local.stderr
tests/runtime/: macros.rs
