[package]
name = "pui"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
repository = "https://github.com/RustyYato/rel-ptr"
description = "A tool for building low level abstractions"
keywords = ["identifier", "unique"]
categories = ["no-std"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = []
alloc = []
nightly = []

[dependencies]
cfg-if = '0.1'

[dev-dependencies]
trybuild = '1'
