[package]
name = "pui"
version = "0.3.1"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
repository = "https://github.com/RustyYato/rel-ptr"
description = "A tool for building low level abstractions"
keywords = ["identifier", "unique"]
categories = ["no-std"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = ['crossbeam-utils']
alloc = []
nightly = []

test = []

[dependencies]
cfg-if = '1'
crossbeam-utils = { version = '0.8', optional = true }

[dev-dependencies]
trybuild = '1'
